# clc

./: .gitignore  CMakeLists.txt  clc.bat  clean_build.bat  config_vs2013.bat  config_vs2015.bat  config_vs2019.bat  install_local.bat
examples/: bits.cl  blend.cl  foo.cl  main.cl  shared.h
src/: clc.cpp  clerrs.h
